--- a/index.css
+++ b/index.css
@@ -5,7 +5,7 @@
 /*header */
 .customNav {
 width: 100%;
-background-color: transparent !important;
+background-color: black !important;
 height: 60px;
 z-index: 10;
 }
@@ -21,9 +21,13 @@ font-size: 100%;
 
 }
 .nav-link {
-color: black !important;
-font-family: 'Lato', sans-serif;
-}
+  color: white !important;
+  font-family: 'Lato', sans-serif;
+  }
+.nav-link:hover {
+  color: black !important;
+  font-family: 'Lato', sans-serif;
+  }
 
 nav ul li:hover { 
   background: #F7D26D; 
@@ -33,45 +37,54 @@ nav ul li:hover {
   border-bottom-right-radius: 4%;
 }
 
-p {
-margin-bottom: 0px;
+li {
+  color: white;
+  font-family: 'Josefin Slab', serif;
+  font-size: 150%;
+  font-weight: normal;
 }
+
 h1 {
-color: white;
-font-family: 'Josefin Slab', serif;
-font-size: 400%;
-padding-left: 10%;
+  margin-top: 7%;
+  margin-bottom: 5%;
+  color: white;
+  font-family: 'Josefin Slab', serif;
+  font-size: 400%;
+  }
+
+h3 {
+  margin-top: 7%;
+  color: white;
+  font-family: 'Josefin Slab', serif;
+  font-size: 200%;
+  font-weight: bold;
 }
 
 h4 {
-color: white;
-font-family: 'Josefin Slab', serif;
-font-size: 200%;
-font-weight: normal;
-margin-bottom: 5%;
-padding-left: 10%;
+  color: white !important;
+  font-family: 'Josefin Slab', serif;
+  font-size: 150%;
+  font-weight: normal;
 }
 
 .heroImg {
-  background-image: url("lakeview.png");
+  background-image: url("drink.png");
   background-repeat: no-repeat;
   background-size: cover;
-  height: 600px; 
+  height: 2500px; 
   text-align: center;
 }
 
-.container {
-  padding-bottom: 5%;
-}
-.card-text {
-  font-family: 'Lato', sans-serif;
+.card-deck {
+  margin-top: 7%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-.card:hover {
-    transform: scale(1.05);
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
-  }
-
+ul {
+  list-style: none
+}
 a {
   text-decoration: none;
   color:black;
@@ -91,12 +104,6 @@ color:black;
   font-size: 100%;
   font-weight: normal;
   color:black;
-  margin: 0 auto;
-  justify-content: center;
-}
-
-
-.middleRow {
   margin: 0 auto;
   justify-content: center;
 }
